Fixed floating search icon and overflow on smaller parent elements
The lens icon was positioned out of the searchbar when the searchbar was 
centred. By adding display: 
inline-block; to .searchbar, it's displayed correctly, but the 
.searchbar element is no more displayed as a block.

The searchbar now should be displayed correctly when it's put in an 
element smaller than it's width, without overflowing.

--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -8,6 +8,8 @@
 
 .searchbar {
 	position: relative;
+	display: inline-block;
+	max-width: 100%;
 }
 .searchbar > input[type=text]{
 	position: relative;
@@ -16,6 +18,7 @@
 	padding: 0.2em 0.2em 0.2em 1.6em;
 	border: var(--general-border) solid var(--accent-faded);
 	border-radius: var(--border-radius);
+	width: 100%;
 }
 .searchbar > input[type=text]:hover,
 .searchbar > input[type=text]:focus {
